--- a/styles/aboutPage.css
+++ b/styles/aboutPage.css
@@ -25,3 +25,41 @@
     color: #941124;
     margin-bottom: 10px;
 }
+
+@media (max-width: 600px) {
+  #aboutText {
+    width: 98vw;
+    min-height: 40vh;
+    padding: 0.5vw;
+    font-size: 0.85em;
+    overflow-y: auto;
+    margin-bottom: 2em;
+  }
+  #aboutText h2 {
+    font-size: 1em;
+  }
+  #back-to-main-menu {
+    font-size: 0.75em;
+    padding: 0.2em 0.5em;
+    margin-top: 1.5em;
+  }
+}
+
+@media (max-width: 900px) and (orientation: landscape) {
+  #aboutText {
+    width: 98vw;
+    max-height: 40vh;
+    padding: 0.2vw;
+    font-size: 0.7em;
+    overflow-y: auto;
+    margin-bottom: 1em;
+  }
+  #aboutText h2 {
+    font-size: 0.9em;
+  }
+  #back-to-main-menu {
+    font-size: 0.7em;
+    padding: 0.2em 0.5em;
+    margin-top: 1em;
+  }
+}
