--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -95,8 +95,8 @@
     align-items: center;
 
     .pile {
-        margin-left: 2em;
-        margin-right: 2em;
+
+        margin: 0 10% 0 10%;
 
 
         h2 {
@@ -537,5 +537,21 @@ body#gameplay {
     margin: 0;
     z-index:0;
 
+
+}
+
+#timerContainer{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h3{
+        color:white;
+        font-size: 500%;
+        margin: 0;
+    }
 
 }
