--- a/styles/lobby.css
+++ b/styles/lobby.css
@@ -1,5 +1,5 @@
-#main.lobby{
-    all:initial;
+#main.lobby {
+    all: initial;
     display: flex;
     flex-direction: column;
     grid-column: 1/-1;
@@ -8,17 +8,18 @@
     width: 100%;
 }
 
-.gameCode{
+.gameCode {
     display: flex;
     align-content: center;
-    h2{
+
+    h2 {
         color: white;
         font-weight: 900;
         text-align: center;
         margin: 0;
     }
 
-    #refresh-code-button{
+    #refresh-code-button {
         flex-grow: 0;
         font-size: 1.5cqw;
         width: 30%;
@@ -28,15 +29,11 @@
 }
 
 
-
-
-
-
-#player-lobby-container{
-    background: darkgrey;
+#player-lobby-container {
+    background: var(--primary-yellow);
     flex-grow: 1;
     border: solid dimgrey;
-    border-radius: 10%;
+    border-radius: 15%;
     width: 60%;
     justify-self: center;
     display: flex;
@@ -46,10 +43,10 @@
     padding-top: 2.5%;
     padding-bottom: 2.5%;
 
-    h2{
+    h2 {
         color: black;
         font-weight: 800;
-        text-align:center;
+        text-align: center;
         margin: 0;
         font-size: 3cqw;
     }
@@ -57,36 +54,43 @@
 }
 
 
-.player-lobby-fields{
+.player-lobby-fields {
     position: relative;
     width: 100%;
     height: 10%;
     flex-grow: 1;
     border: 0.05em solid dimgrey;
     align-content: center;
-    p{
-        &#hostTag{
-            color: var(--primary-yellow);
+
+    p {
+        &#hostTag {
+            color: black;
             -webkit-text-stroke: 0.05cqw black;
             font-weight: 800;
             position: absolute;
             left: 30%;
             height: 25%;
             font-size: 1.5cqw;
-            +p{
+
+            + p {
                 text-decoration: underline;
             }
         }
+
         margin: 0;
-        &.openSlot{
+
+        &.openSlot {
             color: dimgrey;
-            +.removePlayerButton{
-                display:none;
+
+            + .removePlayerButton {
+                display: none;
             }
         }
-        &.takenSlot{
+
+        &.takenSlot {
             font-size: 2cqw;
-            +.removePlayerButton{
+
+            + .removePlayerButton {
                 padding: initial;
                 box-shadow: initial;
                 background-color: lightgrey;
@@ -106,7 +110,7 @@
                 top: 0.1cqw;
                 font-size: 1cqw;
 
-                &:active{
+                &:active {
                     transform: initial;
                     transform: scale(1.2);
 
@@ -116,18 +120,19 @@
             }
         }
     }
-    &.header{
+
+    &.header {
         align-content: center;
 
     }
 }
 
-#startGameplay{
+#startGameplay {
     width: 25%;
 }
 
-#Joiner{
-    .removePlayerButton, #refresh-code-button, #startGameplay{
+#Joiner {
+    .removePlayerButton, #refresh-code-button, #startGameplay {
         display: none;
     }
 }
