--- a/public/styles/joinLobby.css
+++ b/public/styles/joinLobby.css
@@ -17,13 +17,13 @@ main{
 #gameCodeInput{
     width: 20cqw;
     height: 4cqw;
-    font-size: 2cqw;
+    /*font-size: 2cqw;*/
     cursor: text;
+    border-radius: 15px;
+    background-color: lightgray;
+    font-size: 1.8cqw;
     &::placeholder{
-        border: black solid;
-        border-radius: 15px;
-        background-color: lightgray;
-        font-size: 1.8cqw;
+
     }
     border: 0.5cqw solid black;
     margin: 10%;
