Update rules, remove unused file, and improve mobile styles
Clarified draw card stacking rules in rulesPage.html. Removed the unused startSiteNoIntro.html file. Cleaned up commented code in startSite.html. Improved mobile responsiveness and dialog visibility in generalStyles.css, intro.css, introStartSite.css, and startSite.css.

--- a/public/styles/generalStyles.css
+++ b/public/styles/generalStyles.css
@@ -109,11 +109,10 @@ body:has(.speech-bubble[open]) #eichberg2 {
     display: none;
 }
 
-@media (max-width: 600px) {
-    div#header {
-        font-size: 2em;
-        margin-top: 2.5em;
-    }
+@media only screen and (max-width: 600px) {
+   dialog{
+       display:none;
+   }
     #gameTitle {
         font-size: 30em;
         font-weight: 900;
