--- a/public/styles/aboutPage.css
+++ b/public/styles/aboutPage.css
@@ -26,7 +26,7 @@
     margin-bottom: 10px;
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     #aboutText {
         width: 98vw;
         min-height: 40vh;
