Improve join lobby form accessibility and responsiveness
Added viewport meta tag for better mobile support and updated input IDs for clarity. Enhanced CSS for #NameInputJoin and #gameCodeInput to improve layout and font sizing on small screens, ensuring a more responsive and accessible join lobby form.

--- a/public/styles/joinLobby.css
+++ b/public/styles/joinLobby.css
@@ -17,24 +17,29 @@ main{
 #gameCodeInput{
     width: 25cqw;
     height: 4cqw;
-    /*font-size: 2cqw;*/
+    padding: 0;
     cursor: text;
     border-radius: 15px;
     background-color: lightgray;
     font-size: 1.8cqw;
+    justify-self: center;
 
     &::placeholder{
 
     }
     border: 0.5cqw solid black;
-    margin: 10%;
+    margin: 10% 0 10% 0;
 }
-#NameInput{
+#NameInputJoin{
     height: 4cqw;
     font-size: 3cqw;
     border-radius: 15px;
     border: black solid;
     background-color: lightgray;
+
+    &::placeholder{
+        font-size: 2.5cqw;
+    }
 }
 
 .joinForm{
@@ -54,14 +59,7 @@ main{
 .joinLobby{
     form:first-child{
         width: 30%;
-        #NameInput{
-            font-size: 3cqw;
 
-            &::placeholder{
-                font-size: 2.5cqw;
-
-            }
-        }
 
     }
 
@@ -72,14 +70,18 @@ main{
 }
 
 
-@media (max-width: 600px) {
-    main {
-        width: 98vw;
-        padding: 0;
-    }
+@media only screen and (max-width: 600px) {
+
     #gameCodeInput {
         width: 80vw;
         font-size: 1em;
+    }
+    #NameInputJoin{
+        height: 25%;
+        font-size: 200%;
+        &::placeholder{
+            font-size: 100%;
+        }
     }
     .joinForm {
         width: 80vw;
@@ -88,7 +90,19 @@ main{
     .joinLobby form:first-child {
         width: 90vw;
     }
-    #NameInput {
-        font-size: 1em;
+    #gameCodeInput{
+        height: 28%;
+        font-size: 200%;
+        border: 1cqw solid black;
+
+        &::placeholder{
+            font-size: 90%;
+        }
     }
+    #joinBackBtn{
+        position: absolute;
+        top: 22%;
+        justify-self: center;
+    }
+
 }
