--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -151,6 +151,9 @@
     width: 10%;
     position: relative;
     background-color: rgba(169, 169, 169, 0.5); /* Grauton mit 50% Transparenz */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     flex-grow: 0;
 
     .player-name {
