--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -180,6 +180,7 @@
             .cardsleft {
                 color: white;
                 -webkit-text-stroke: 0.07cqw black;
+                font-size: 2cqw;
                 margin: 0;
             }
 
@@ -278,6 +279,7 @@
             .cardsleft {
                 color: white;
                 -webkit-text-stroke: 0.07cqw black;
+                font-size: 2cqw;
                 margin: 0;
             }
         }
