--- a/public/styles/joinLobby.css
+++ b/public/styles/joinLobby.css
@@ -1,108 +1,111 @@
-main{
-    grid-column: 1/-1;
-    grid-row: 2;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+main {
+  grid-column: 1/-1;
+  grid-row: 2;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  * {
     width: 100%;
-    flex-direction: column;
-    *{
-        width: 100%;
-        flex-grow: 0;
-        flex-shrink: 0;
-    }
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
 }
 
-#gameCodeInput{
-    width: 25cqw;
-    height: 4cqw;
-    padding: 0;
-    cursor: text;
-    border-radius: 15px;
-    background-color: lightgray;
-    font-size: 1.8cqw;
-    justify-self: center;
+#gameCodeInput {
+  width: 25vw;
+  width: 25cqw;
+  height: 4vh;
+  height: 4cqw;
 
-    &::placeholder{
+  padding: 0;
+  cursor: text;
+  border-radius: 15px;
+  background-color: lightgray;
+  font-size: 1.8vw;
+  font-size: 1.8cqw;
+  justify-self: center;
 
-    }
-    border: 0.5cqw solid black;
-    margin: 10% 0 10% 0;
+  &::placeholder {
+  }
+  border: 0.5vw solid black;
+  border: 0.5cqw solid black;
+  margin: 10% 0 10% 0;
 }
-#NameInput.Join{
-    height: 4cqw;
-    font-size: 3cqw;
-    border-radius: 15px;
-    border: black solid;
-    background-color: lightgray;
+#NameInput.Join {
+  height: 4cqw;
+  height: 4vh;
+  font-size: 3vw;
+  font-size: 3cqw;
+  border-radius: 15px;
+  border: black solid;
+  background-color: lightgray;
 
-    &::placeholder{
-        font-size: 2.5cqw;
-    }
-}
-
-.joinForm{
-    border-radius: 10%;
-    aspect-ratio: 2.5/1;
-    width: 20%;
-    font-weight: 800;
-    font-size: 3cqw;
-    background-color: var(--primary-yellow);
-    border: solid 0.5cqh white;
-
-    &#cancelJoin{
-        background-color: var(--secondary-yellow);
-    }
+  &::placeholder {
+    font-size: 2.5vw;
+    font-size: 2.5cqw;
+  }
 }
 
-.joinLobby{
-    form:first-child{
-        width: 30%;
+.joinForm {
+  border-radius: 10%;
+  aspect-ratio: 2.5/1;
+  width: 20%;
+  font-weight: 800;
+  font-size: 3cqw;
+  background-color: var(--primary-yellow);
+  border: solid 0.5vh white;
+  border: solid 0.5cqh white;
 
-
-    }
-
+  &#cancelJoin {
+    background-color: var(--secondary-yellow);
+  }
 }
 
-#joinGame{
-    width: 35%;
+.joinLobby {
+  form:first-child {
+    width: 30%;
+  }
 }
 
+#joinGame {
+  width: 35%;
+}
 
 @media only screen and (max-width: 600px) {
+  #gameCodeInput {
+    width: 80vw;
+    font-size: 1em;
+  }
+  #NameInput.Join {
+    height: 25%;
+    font-size: 200%;
+    &::placeholder {
+      font-size: 100%;
+    }
+  }
+  .joinForm {
+    width: 80vw;
+    font-size: 1.2em;
+  }
+  .joinLobby form:first-child {
+    width: 90vw;
+  }
+  #gameCodeInput {
+    height: 28%;
+    font-size: 200%;
+    border: 1vw;
+    border: 1cqw solid black;
 
-    #gameCodeInput {
-        width: 80vw;
-        font-size: 1em;
+    &::placeholder {
+      font-size: 90%;
     }
-    #NameInput.Join{
-        height: 25%;
-        font-size: 200%;
-        &::placeholder{
-            font-size: 100%;
-        }
-    }
-    .joinForm {
-        width: 80vw;
-        font-size: 1.2em;
-    }
-    .joinLobby form:first-child {
-        width: 90vw;
-    }
-    #gameCodeInput{
-        height: 28%;
-        font-size: 200%;
-        border: 1cqw solid black;
-
-        &::placeholder{
-            font-size: 90%;
-        }
-    }
-    #joinBackBtn{
-        position: absolute;
-        top: 22%;
-        justify-self: center;
-    }
-
+  }
+  #joinBackBtn {
+    position: absolute;
+    top: 22%;
+    justify-self: center;
+  }
 }
