Add startSite class to menu and update CSS
Applied the 'startSite' class to the #menu div in startSite.html and added corresponding flexbox styling in startSite.css to center the menu content.

--- a/public/styles/startSite.css
+++ b/public/styles/startSite.css
@@ -20,6 +20,11 @@ div#main {
     text-align: center;
     grid-column: 1 / -1;
     grid-row: 2;
+    &.startSite{
+        display: flex;
+        justify-content: center;
+
+    }
 }
 
 /* Unteres Menü */
