Update gameplay and startSite CSS for improved centering
Replaces 'justify-self: center' with 'left: 50%' and 'transform: translateX(-50%)' for #UYES and #group to achieve better horizontal centering. Removes unnecessary flex styling from .startSite class in startSite.css.

--- a/public/styles/gameplay.css
+++ b/public/styles/gameplay.css
@@ -1,8 +1,9 @@
 #UYES {
     position: absolute;
     top: 65%;
-    justify-self: center;
     left: 50%;
+    transform: translateX(-50%);
+
 
     aspect-ratio: 2.5/1;
     width: 10%;
