Add height and background-repeat to intro styles
Set explicit height for #eichberg elements in introChooseLobby, introCreateGame, and introStartSite CSS files for consistent sizing. Added background-repeat: no-repeat to the image in intro.css to prevent tiling.

--- a/public/styles/introStartSite.css
+++ b/public/styles/introStartSite.css
@@ -1,6 +1,7 @@
 /* Stil des zentralen Dialogs ("eichberg-figur") */
 #eichberg.startsite {
     width: 35%;
+    height: 35%;
     position: absolute;
     top: 15%;
 }
