--- a/public/styles/startSite.css
+++ b/public/styles/startSite.css
@@ -59,10 +59,9 @@ div#menu {
 
 /* Bild (Gruppenbild oder ähnliches) */
 #group {
-    left: 50%;
-
+    grid-column: 2;
     aspect-ratio: 1/1;
-    width: 25%;
+    width: 100%;
     max-width: 100cqh; /* ❗️Auch hier: moderne Einheit – checke auf Mobilgeräten */
     background-image: url("../images/group.png");
     background-size: contain; /* Inhalt skalieren, ohne zu beschneiden */
